<resources>
    <string name="app_name">WhereRU</string>
    <string name="login">登录</string>
    <string name="session">会话</string>
    <string name="contacts">联系人</string>
    <string name="settings">设置</string>
    <string name="album">相册</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="point">.</string>
    <string name="server_ip">服务器IP:</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="confirm">确定</string>
    <string name="setPassword">设置密码</string>
    <string name="new_friends">新的朋友</string>
    <string name="add">添加</string>
    <string name="accept">接受</string>
    <string name="countdown">获取验证码</string>
    <string name="send">发送</string>
    <string name="nickname">昵称</string>
    <string name="avatar">头像</string>
    <string name="take_photo">拍照</string>
    <string name="from_gallery">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="logout">切换账号</string>
    <string name="new_friend">新的朋友</string>
    <string name="agree">同意</string>
    <string name="map">地图</string>
    <string name="user_not_exists">该用户不存在</string>
    <string name="search_colon">搜索：</string>
    <string name="user_info">详细资料</string>
    <string name="tel">电话号码</string>
    <string name="location">定位信息</string>
    <string name="delete_friend">刪除好友</string>
    <string name="action_settings">Settings</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="conversation">会话</string>
    <string name="send_msg">发消息</string>
    <string name="check_update">检查更新</string>
    <string name="your_tel">你的手机号码</string>
    <string name="next">下一步</string>
    <string name="verification_code">验证码</string>
    <string name="new_password">新的密码</string>
    <string name="input_password_again">再次输入密码</string>
</resources>
