<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/pop_layout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:background="@color/colorPrimaryDark"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/take_photo"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_pick_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/from_gallery"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>
</LinearLayout>
