<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".main.MainActivity">

    <include layout="@layout/toolbar"/>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <include layout="@layout/divider"/>
            <RadioGroup
                android:id="@+id/rg_content_fragment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <RadioButton
                    android:id="@+id/rb_content_fragment_conversation"
                    style="@style/tab_style"
                    android:drawableTop="@drawable/tab_conversation_btn"
                    android:text="@string/conversation"/>

                <RadioButton
                    android:id="@+id/rb_content_fragment_contact"
                    style="@style/tab_style"
                    android:drawableTop="@drawable/tab_contact_btn"
                    android:text="@string/contacts"/>

                <RadioButton
                    android:id="@+id/rb_content_fragment_map"
                    style="@style/tab_style"
                    android:drawableTop="@drawable/tab_map_btn"
                    android:text="@string/map"/>
            </RadioGroup>

        </LinearLayout>



        <android.support.design.widget.NavigationView
            android:id="@+id/navigation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/header_just_username"
            app:menu="@menu/menu_drawer"/>
    </android.support.v4.widget.DrawerLayout>


</LinearLayout>